# StrategyLab

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  data-contracts.md  model-cards.md  simulator.md
src/strategylab/: __init__.py  contracts.py
src/strategylab/apps/: __init__.py
src/strategylab/apps/api/: main.py
src/strategylab/apps/trainer/: __init__.py  cli.py
src/strategylab/apps/worker/: __init__.py  cli.py
src/strategylab/data/: __init__.py  feature_store.py  processors.py  schemas.py  service.py  storage.py
src/strategylab/data/ingestion/: __init__.py  base.py  fastf1_client.py  fixture_client.py  jolpica_client.py
src/strategylab/data/processors/: race_normalizer.py
src/strategylab/domain/: __init__.py
src/strategylab/domain/race/: __init__.py  state.py
src/strategylab/domain/strategy/: __init__.py  types.py
src/strategylab/infra/: config.py  logging.py  registry.py
src/strategylab/models/: __init__.py  base.py  catalog.py
src/strategylab/models/pace/: __init__.py  model.py
src/strategylab/models/tyre_deg/: __init__.py  model.py
src/strategylab/services/: pipeline.py
src/strategylab/services/optimizer/: __init__.py  service.py
src/strategylab/services/recommender/: __init__.py  service.py
src/strategylab/services/simulator/: __init__.py  service.py
tests/: conftest.py  test_api.py  test_feature_store.py  test_ingestion_and_models.py  test_models.py  test_simulation.py
tests/fixtures/: bahrain_2024_fixture.json
